# Taiwan_Compliance_Agent

./: config.py  generate_z3_code_from_constraints.py  generator.py  main.py  prompt.py  pyproject.toml  solver_output.z3.py
agents/: case_mapper.py  orchestrator.py  prompt.py  statute_parser.py
core/: renderer.py
data/: dataset.csv
dataset/: case_law_pair.csv
outputs/: case_0.constraint_spec.json  case_0.mapper_log.txt  case_0.parser_log.txt  case_0.varspec_facts.json  case_0.z3.py
