[project]
name = "compliance-case-automatic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.9.9",
    "dotenv>=0.9.9",
    "openai>=1.40.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "z3-solver>=4.15.3.0",
]
